# sarcher

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 35e2930a2054_initial_schema.py  c3d4e5f6a1b2_add_credit_usage_table.py  d4e5f6a1b2c3_add_phase4_tables.py  e5f6a1b2c3d4_add_scaled_discovery_fields.py
cli/: main.py
src/api/: app.py  dependencies.py
src/api/routes/: campaigns.py  compliance.py  dashboard.py  discover.py  leads.py  tasks.py  workflows.py
src/api/static/: index.html
src/application/dtos/: lead_dto.py  organization_dto.py
src/application/schemas/: campaign_schemas.py  compliance_schemas.py  enrichment_schemas.py  extraction_schemas.py
src/application/services/: deduplication.py  size_estimator.py
src/application/use_cases/: create_campaign.py  enrich_lead.py  export_leads.py  (+6 more)
src/domain/: enums.py
tests/integration/: test_campaign_integration.py  test_enrichment_integration.py  test_lead_repository.py  test_scraper_integration.py
tests/unit/: test_apollo_adapter.py  test_browser_scraper.py  test_corporate_website_adapter.py  test_credit_manager.py  test_dag_runner.py  test_email_sender.py  test_enrichment_pipeline.py  test_extraction_engine.py  test_gdpr_manager.py  test_html_preprocessor.py  test_http_scraper.py  test_humanization.py  test_hunter_adapter.py  test_ingest_lead.py  test_lead_entity.py  test_llm_client.py  test_objection_handler.py  test_phase5_discover.py  test_phase6_scaled_discovery.py  test_proxy_manager.py  test_robots_checker.py  test_sentiment_analyzer.py  test_sequence_manager.py  test_template_engine.py  test_tls_manager.py
(+62 files in other folders)
