[project]
name = "networking-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "thefuzz[speedup]>=0.22.0",
    # Phase 2 - Scraping & Evasion
    "curl-cffi>=0.7.0",
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fake-useragent>=1.5.0",
    "tenacity>=8.0.0",
    # Phase 3 - LLM Extraction & Enrichment
    "ollama>=0.3.0",
    "litellm>=1.40.0",
    "instructor>=1.3.0",
    "markdownify>=0.13.0",
    "tiktoken>=0.7.0",
    "trafilatura>=1.12.0",
    # Phase 4 - Outreach & Automation
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "jinja2>=3.1.0",
    "python-frontmatter>=1.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "apscheduler>=3.10.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
networking-engine = "cli.main:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
